--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="./styles.css">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    </head><script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<body>
 <script>
 
 async function run(){
@@ -21,3 +27,4 @@ async function getBusLocations(){
 run();
 
 </script>
+</body>
