--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./styles.css">
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    </head><script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    </head>
 	<body>
+
+
 <script>
 
 async function run(){
